<resources>
    <string name="app_name">MyLabApppech1205</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="display_text_successful">Hello blank fragment</string>
    <string name="signIn_info_button">Sign In</string>
    <string name="register_info_button">Register</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">Fisrt Name</string>
    <string name="last_name">Last Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_to_success">Register</string>
    <string name="title_home">Home</string>
    <string name="title_blog">Blog Post</string>
    <string name="title_activity_main">MainActivity</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="text_email">Text View</string>
    <string name="action_link">Full Post</string>
</resources>